name:                shinken-config-graph
version:             0.1.0.0
synopsis:            Generates graphs about Shinken configuration
license:             GPL-3
license-file:        LICENSE
author:              Yves Dubromelle
maintainer:          yves@dubronetwork.fr
category:            Monitoring
build-type:          Simple
cabal-version:       >=1.10

executable shinken-config-graph
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8, directory, filemanip, mtl, parsec, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  
